--- a/burger-menu/src/index.html
+++ b/burger-menu/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Phone, tablet, desktop adaptive design</title>
+    <title>Burger menu</title>
 </head>
 <body>
 
@@ -11,13 +11,22 @@
         <a href="#" class="menu-btn">
             <span></span>
         </a>
-
         <nav class="menu">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Contacts</a>
         </nav>
+    </div>
 
+    <div class="menu-block vertical">
+        <a href="#" class="menu-btn">
+            <span></span>
+        </a>
+        <nav class="menu vertical">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contacts</a>
+        </nav>
     </div>
 </div>
 
