feat: add moving icon menu

--- a/burger-menu/src/index.html
+++ b/burger-menu/src/index.html
@@ -19,13 +19,24 @@
     </div>
 
     <div class="menu-block vertical">
+    <a href="#" class="menu-btn">
+        <span></span>
+    </a>
+    <nav class="menu vertical">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contacts</a>
+    </nav>
+</div>
+
+    <div class="menu-block icon">
         <a href="#" class="menu-btn">
             <span></span>
         </a>
-        <nav class="menu vertical">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contacts</a>
+        <nav class="menu-icon">
+            <a href="#"><i class="fas fa-camera-retro"></i></a>
+            <a href="#"><i class="fas fa-address-book"></i></a>
+            <a href="#"><i class="fas fa-apple-alt"></i></a>
         </nav>
     </div>
 </div>
