--- a/left-menu/src/index.html
+++ b/left-menu/src/index.html
@@ -8,25 +8,29 @@
 
 <div class="wrapper">
     <div class="menu">
-        <a href="#" class="menu-btn"></a>
+        <a href="#" class="menu-btn">
+            <div class="menu-btn-burger">
+                <span></span>
+            </div>
+        </a>
         <nav class="menu-list">
-            <a href="#">Main</a>
-            <a href="#">Portfolio</a>
-            <a href="#">About</a>
-            <a href="#">Contacts</a>
+            <a href="#main">Main</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#about">About</a>
+            <a href="#contacts">Contacts</a>
         </nav>
     </div>
     <div class="content">
-        <section class="main">
+        <section class="main" id="main">
             <h2>Main</h2>
         </section>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <h2>Portfolio</h2>
         </section>
-        <section class="about">
+        <section class="about" id="about">
             <h2>About</h2>
         </section>
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <h2>Contacts</h2>
         </section>
     </div>
