feat: create checkbox like android-checkbox

--- a/custom-checkbox/src/index.html
+++ b/custom-checkbox/src/index.html
@@ -7,11 +7,27 @@
 <body>
 
 <div class="wrap">
-    <input type="checkbox" class="checkbox" id="numbers">
-    <label for="numbers">Numbers</label>
+    <div class="section simple-checkbox">
+        <input type="checkbox" class="checkbox" id="numbers">
+        <label for="numbers">Numbers</label>
 
-    <input type="checkbox" class="checkbox" id="letters">
-    <label for="letters">Letters</label>
+        <input type="checkbox" class="checkbox" id="letters">
+        <label for="letters">Letters</label>
+    </div>
+
+    <div class="section android-checkbox">
+        <div>
+            <span>Numbers</span>
+            <input type="checkbox" class="checkbox" id="numbers1">
+            <label for="numbers1"></label>
+        </div>
+
+        <div>
+            <span>Letters</span>
+            <input type="checkbox" class="checkbox" id="letters1">
+            <label for="letters1"></label>
+        </div>
+    </div>
 </div>
 
 </body>
