feat: add link hovers for navigation

--- a/link-hovers/src/index.html
+++ b/link-hovers/src/index.html
@@ -6,22 +6,34 @@
 </head>
 <body>
 
-<div class="links">
-    <p class="from-left">
-        <a href="#">From left</a>
-    </p>
+<div class="wrap">
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Skills</a></li>
+			<li><a href="#">Portfolio</a></li>
+			<li><a href="#">Contacts</a></li>
+		</ul>
+	</nav>
 
-    <p class="from-left-to-right">
-        <a href="#">From left to right</a>
-    </p>
+    <div class="links">
+        <p class="from-left">
+            <a href="#">From left</a>
+        </p>
 
-    <p class="from-center">
-        <a href="#">From center</a>
-    </p>
+        <p class="from-left-to-right">
+            <a href="#">From left to right</a>
+        </p>
 
-    <p class="under-and-above">
-        <a href="#">Under and above</a>
-    </p>
+        <p class="from-center">
+            <a href="#">From center</a>
+        </p>
+
+        <p class="under-and-above">
+            <a href="#">Under and above</a>
+        </p>
+    </div>
 </div>
 
 </body>
