feat: add svg-hover

--- a/buttons/src/index.html
+++ b/buttons/src/index.html
@@ -7,8 +7,14 @@
 <body>
 
 <div class="wrapper">
-	<div class="button">
+    <div class="button flare">
         <a href="#">Look at me!</a>
+    </div>
+    <div class="button border">
+        Hover me!
+        <svg width="130" height="40">
+            <rect x="0" y="0" fill="none" width="130" height="40"></rect>
+        </svg>
     </div>
 </div>
 
