feat: add neon buttons

--- a/buttons/src/index.html
+++ b/buttons/src/index.html
@@ -16,6 +16,26 @@
             <rect x="0" y="0" fill="none" width="130" height="40"></rect>
         </svg>
     </div>
+
+    <div class="social">
+	<ul class="social__list">
+		<li class="social__item vk">
+            <i class="fab fa-vk"></i>
+        </li>
+		<li class="social__item instagram">
+            <i class="fab fa-instagram"></i>
+        </li>
+		<li class="social__item facebook">
+            <i class="fab fa-facebook"></i>
+        </li>
+		<li class="social__item google">
+            <i class="fab fa-google"></i>
+        </li>
+		<li class="social__item twitter">
+            <i class="fab fa-twitter"></i>
+        </li>
+	</ul>
+</div>
 </div>
 
 </body>
