feat: add animation neon button

--- a/buttons/src/index.html
+++ b/buttons/src/index.html
@@ -10,6 +10,7 @@
     <div class="button flare">
         <a href="#">Look at me!</a>
     </div>
+
     <div class="button border">
         Hover me!
         <svg width="130" height="40">
@@ -18,24 +19,32 @@
     </div>
 
     <div class="social">
-	<ul class="social__list">
-		<li class="social__item vk">
-            <i class="fab fa-vk"></i>
-        </li>
-		<li class="social__item instagram">
-            <i class="fab fa-instagram"></i>
-        </li>
-		<li class="social__item facebook">
-            <i class="fab fa-facebook"></i>
-        </li>
-		<li class="social__item google">
-            <i class="fab fa-google"></i>
-        </li>
-		<li class="social__item twitter">
-            <i class="fab fa-twitter"></i>
-        </li>
-	</ul>
-</div>
+        <ul class="social__list">
+            <li class="social__item vk">
+                <i class="fab fa-vk"></i>
+            </li>
+            <li class="social__item instagram">
+                <i class="fab fa-instagram"></i>
+            </li>
+            <li class="social__item facebook">
+                <i class="fab fa-facebook"></i>
+            </li>
+            <li class="social__item google">
+                <i class="fab fa-google"></i>
+            </li>
+            <li class="social__item twitter">
+                <i class="fab fa-twitter"></i>
+            </li>
+        </ul>
+    </div>
+
+    <div class="button neon">
+        <span class="button__line button__line--top"></span>
+        <span class="button__line button__line--right"></span>
+        <span class="button__line button__line--bottom"></span>
+        <span class="button__line button__line--left"></span>
+        Neon Button
+    </div>
 </div>
 
 </body>
