feat: add social-link card-hover

--- a/card-hover/src/index.html
+++ b/card-hover/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<section class="wrap">
+<section class="wrap translate-card">
     <figure>
         <figcaption>
             <h2>Name</h2>
@@ -22,6 +22,19 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book.</p>
+        </figcaption>
+    </figure>
+</section>
+
+<section class="wrap social-card">
+    <figure>
+        <figcaption>
+            <h2>cactus</h2>
+            <ul>
+                <li><a href="#" class="fas fa-heart"></a></li>
+                <li><a href="#" class="fas fa-comment"></a></li>
+                <li><a href="#" class="fas fa-reply"></a></li>
+            </ul>
         </figcaption>
     </figure>
 </section>
