--- a/select-with-image/index.html
+++ b/select-with-image/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Select with image</title>
-</head>
+<link href="dist/main.css" rel="stylesheet"></head>
 <body>
 
-</body>
+<script type="text/javascript" src="dist/main.js"></script></body>
 </html>
