feat: set value if selected

--- a/multiple-select-table/index.html
+++ b/multiple-select-table/index.html
@@ -12,20 +12,20 @@
     <button data-selector="center" class="table-header">Средняя вертикальная область</button>
     <button data-selector="right" class="table-header span-two">Праая область</button>
 
-    <button data-align="left" data-justify="start">1</button>
-    <button data-align="center" data-justify="start">2</button>
-    <button data-align="right" data-justify="start">3</button>
+    <button data-selector="1" data-align="left" data-justify="start" value="">1</button>
+    <button data-selector="2" data-align="center" data-justify="start" value="">2</button>
+    <button data-selector="3" data-align="right" data-justify="start" value="">3</button>
     <button data-selector="start" class="table-header">Верхняя область</button>
 
 
-    <button data-align="left" data-justify="middle">4</button>
-    <button data-align="center" data-justify="middle">5</button>
-    <button data-align="right" data-justify="middle">6</button>
+    <button data-selector="4" data-align="left" data-justify="middle" value="">4</button>
+    <button data-selector="5" data-align="center" data-justify="middle" value="">5</button>
+    <button data-selector="6" data-align="right" data-justify="middle" value="">6</button>
     <button data-selector="middle" class="table-header">Средняя горизонтальная область</button>
 
-    <button data-align="left" data-justify="end">7</button>
-    <button data-align="center" data-justify="end">8</button>
-    <button data-align="right" data-justify="end">9</button>
+    <button data-selector="7" data-align="left" data-justify="end" value="">7</button>
+    <button data-selector="8" data-align="center" data-justify="end" value="">8</button>
+    <button data-selector="9" data-align="right" data-justify="end" value="">9</button>
     <button data-selector="end" class="table-header">Нижняя область</button>
 
     <button data-selector="all" class="table-header span-four">Вся поверхность</button>
