feat: add hidden input for php post require

--- a/multiple-select-table/index.html
+++ b/multiple-select-table/index.html
@@ -29,7 +29,7 @@
     <button data-selector="end" class="table-header">Нижняя область</button>
 
     <button data-selector="all" class="table-header span-four">Вся поверхность</button>
-
+    <input id="location" type="text" hidden value="">
 </div>
 
 <script src="./script.js"></script>
